# silaba

./: .gitignore  AGENTS.md  LICENSE  README.md  fala.py  fala_rest.py  palavra.py  pyproject.toml  render.py  server.py  silaba.py  speech.py  speech_google.py  speech_gtts.py  texto.py
static/: app.js  index.html
tests/: conftest.py  test_server.py  test_speech.py  test_texto.py
